Closed Bug 606934 Opened 14 years ago Closed 13 years ago

We don't register Thunderbird as the default .eml handler on linux

Categories

(Thunderbird :: OS Integration, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 13.0

People

(Reporter: Usul, Assigned: hiro)

References

(Depends on 1 open bug, Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

STR :

1) install TB - make Tb the default client
2) create an account
3) Save an email from the account
4) close TB
5) double click on saved email

Mail.app starts :(
Flags: wanted-thunderbird+
Keywords: helpwanted
you mean bug 300393 ?
(In reply to comment #1)
> you mean bug 300393 ?

Yes and I missed it when I searched.
Depends on: 309708
Attached patch Fix for Linux (obsolete) — Splinter Review
This is only effective with --enable-gio option.
Attachment #595325 - Flags: review?(mbanner)
Comment on attachment 595325 [details] [diff] [review]
Fix for Linux

Errm, note that this bug was about mac and not linux.
Attachment #595325 - Flags: review?(mbanner) → review?(mconley)
Hey Chris,

I feel like this is more your domain than mine.  How does everything look here, GIO-wise?

-Mike
(In reply to Mark Banner (:standard8) from comment #6)
> Comment on attachment 595325 [details] [diff] [review]
> Fix for Linux
> 
> Errm, note that this bug was about mac and not linux.

The bug for linux (and Mac), bug 300393, had been duplicated this bug..
Comment on attachment 595325 [details] [diff] [review]
Fix for Linux

Review of attachment 595325 [details] [diff] [review]:
-----------------------------------------------------------------

Just one nit - but other than that, this looks really good to me.  Thanks Hiro.

::: mail/components/shell/nsMailGNOMEIntegration.cpp
@@ +158,5 @@
>    *aIsDefaultClient = true;
> +
> +  for (unsigned int i = 0; i < NS_ARRAY_LENGTH(sAppTypes); i++) {
> +    if (aApps & sAppTypes[i].type)
> +      *aIsDefaultClient &= checkDefault(sAppTypes[i].protocols, NS_ARRAY_LENGTH(sAppTypes[i].protocols));

I like how you've reduced the repetitive if statements we had before.  Can you break this up into two lines?
Attachment #595325 - Flags: review?(mconley) → review+
Attached patch Revised patchSplinter Review
Carrying over review+.
Assignee: nobody → hiikezoe
Attachment #595325 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #596928 - Flags: review+
Keywords: checkin-needed
Blocks: 726969
Checked in: http://hg.mozilla.org/comm-central/rev/7150237ed78f

Branched out Mac to bug 726969 so we can track that separately.
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Summary: We don't register Thunderbird as the default .eml handler → We don't register Thunderbird as the default .eml handler on linux
Target Milestone: --- → Thunderbird 13.0
OS: Mac OS X → Linux
Hardware: x86 → All
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: