Bug 606934 - We don't register Thunderbird as the default .eml handler on linux. r=mconley