mail/components/shell/nsMailGNOMEIntegration.h
@@ -61,7 +61,10 @@ protected:
 
   bool KeyMatchesAppName(const char *aKeyValue) const;
   bool checkDefault(const char* const *aProtocols, unsigned int aLength);
-  nsresult MakeDefault(const char* const *aProtocols, unsigned int aLength);
+  nsresult MakeDefault(const char* const *aProtocols,
+                       unsigned int aProtocolsLength,
+                       const char *mimeType,
+                       const char *extensions);
 private:
   bool GetAppPathFromLauncher();
   bool CheckHandlerMatchesAppName(const nsACString& handler) const;
